More work-in-progress on XHRMaster(Tracker) and XHRSlave(Tracker); work on making chatapp use the two subdomains for XHR

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -61,11 +61,15 @@ If no such cookie, write out the iframes immediately.
 	// a mismatch of "explicit port" and "implicit port" may prevent
 	// cross-subdomain interaction from working in some browsers.
 	__XDRFrame_loaded.portString = location.port ? ':' + location.port : "";
+	__XDRFrame_loaded.url1 = location.protocol + '//{{ sub1 }}.{{ domain }}' +
+		__XDRFrame_loaded.portString + '/';
+	__XDRFrame_loaded.url2 = location.protocol + '//{{ sub2 }}.{{ domain }}' +
+		__XDRFrame_loaded.portString + '/';
 	document.write(
-		'<iframe width=16 height=16 src="//{{ sub1 }}.{{ domain }}' +
-			__XDRFrame_loaded.portString + '/xdrframe/?id=1"></iframe>' +
-		'<iframe width=16 height=16 src="//{{ sub2 }}.{{ domain }}' +
-			__XDRFrame_loaded.portString + '/xdrframe/?id=2"></iframe>');
+		'<iframe width=16 height=16 src="' + __XDRFrame_loaded.url1 +
+			'xdrframe/?id=1" id="chatapp-iframe-1"></iframe>' +
+		'<iframe width=16 height=16 src="' + __XDRFrame_loaded.url2 +
+			'xdrframe/?id=2" id="chatapp-iframe-2"></iframe>');
 </script>
 
 <div id="FlashConnectorSwf"></div>
@@ -212,9 +216,25 @@ chatapp.getEndpoint = function() {
 	var queryData = url.getQueryData();
 	var mode = queryData.get('mode');
 	if(mode == 'http') {
-		var pageUrl = new goog.Uri(window.location.href);
-		var endpointUrl = pageUrl.resolve(new goog.Uri('/httpface/')).toString();
-		var endpoint = new cw.net.HttpEndpoint(endpointUrl, goog.global, endpointUrl, goog.global);
+		// Assume both iframes are loaded
+		if(__XDRFrame_loaded.done.length != 2) {
+			throw Error("One of the 2 iframes hasn't loaded yet. " +
+				"Improve this code to wait for them.");
+		}
+
+		var primaryWindow = goog.dom.getFrameContentWindow(
+			goog.dom.getElement('chatapp-iframe-1'));
+		var secondaryWindow = goog.dom.getFrameContentWindow(
+			goog.dom.getElement('chatapp-iframe-2'));
+
+		var primaryUrl = new goog.Uri(__XDRFrame_loaded.url1);
+		primaryUrl.setPath('/httpface/');
+
+		var secondaryUrl = new goog.Uri(__XDRFrame_loaded.url2);
+		secondaryUrl.setPath('/httpface/');
+
+		var endpoint = new cw.net.HttpEndpoint(
+			primaryUrl.toString(), primaryWindow, secondaryUrl.toString(), secondaryWindow);
 		return goog.async.Deferred.succeed(endpoint);
 	} else {
 		var host = url.getDomain();
