Use `cw.string.getCleanRandomString` instead of `goog.string.getRandomString`. Note: JavaScript tests still broken due to previous commit.

--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -82,7 +82,7 @@ window.onerror = function(msg, url, lineNumber) {
 };
 
 function getRandom() {
-	return goog.string.getRandomString() + goog.string.getRandomString();
+	return cw.string.getCleanRandomString() + cw.string.getCleanRandomString();
 }
 
 
