Py Minerva: Implement maxOpenTime on server. Also:
 * maxOpenTime is now measured in milliseconds, not seconds.

 * Update clients for the above change.

--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -156,7 +156,7 @@ function makeHelloData(uaId, transportNumber) {
 	}
 	helloData[HP.streamingResponse] = Number(mode == 'flash');
 	helloData[HP.maxReceiveBytes] = 9999999;
-	helloData[HP.maxOpenTime] = 3600;
+	helloData[HP.maxOpenTime] = 3600 * 1000;
 	helloData[HP.succeedsTransport] = null;
 	helloData[HP.httpFormat] = 2; /* XHR */
 	helloData[HP.sack] = '|' + String(ackNum);
