minerva/chatapp/chatapp.html: improve comments about the Firefox bug

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -89,26 +89,31 @@ If no such cookie, write out the iframes immediately.
 	// a mismatch of "explicit port" and "implicit port" may prevent
 	// cross-subdomain interaction from working in some browsers.
 	var portString = location.port ? ':' + location.port : "";
-	__XDRFrame_loaded.id1 = getCleanRandomString() + getCleanRandomString();
-	__XDRFrame_loaded.id2 = getCleanRandomString() + getCleanRandomString();
-	__XDRFrame_loaded.baseurl1 = location.protocol + '//{{ sub1 }}.{{ domain }}' + portString + '/';
-	__XDRFrame_loaded.baseurl2 = location.protocol + '//{{ sub2 }}.{{ domain }}' + portString + '/';
-	__XDRFrame_loaded.xdrurl1 = __XDRFrame_loaded.baseurl1 + 'xdrframe/?framenum=1&id=' + __XDRFrame_loaded.id1;
-	__XDRFrame_loaded.xdrurl2 = __XDRFrame_loaded.baseurl2 + 'xdrframe/?framenum=2&id=' + __XDRFrame_loaded.id2;
 
 	// Reload/F5 in Firefox 3+ has a long-standing bug with iframes: the new
 	// iframe src= in the DOM structure is ignored, and Firefox makes a
 	// request to an older iframe src=.  This also happens after session
-	// recovery. Another bug claims that iframe targets are sometimes
+	// recovery.  Another bug claims that iframe targets are sometimes
 	// mixed up, which implies some broken internal cache.
 	//
+	// A child iframe compares this id with the &id= from its URL, and if
+	// they don't match, iframe redirects itself to the correct xdrurl.
+	__XDRFrame_loaded.id1 = getCleanRandomString() + getCleanRandomString();
+	__XDRFrame_loaded.id2 = getCleanRandomString() + getCleanRandomString();
+	__XDRFrame_loaded.baseurl1 = location.protocol + '//{{ sub1 }}.{{ domain }}' + portString + '/';
+	__XDRFrame_loaded.baseurl2 = location.protocol + '//{{ sub2 }}.{{ domain }}' + portString + '/';
+	__XDRFrame_loaded.xdrurl1 = __XDRFrame_loaded.baseurl1 +
+		'xdrframe/?framenum=1&id=' + __XDRFrame_loaded.id1;
+	__XDRFrame_loaded.xdrurl2 = __XDRFrame_loaded.baseurl2 +
+		'xdrframe/?framenum=2&id=' + __XDRFrame_loaded.id2;
+
 	// Each frame should get 1 attempt to redirect itself to the correct URL.
 	// This counter needs to be in the parent page, not in the iframe (which
 	// may be loaded with some old URL).
 	__XDRFrame_loaded.redirectCountdown = 2;
+
 	//document.write('xdrurl1: ' + __XDRFrame_loaded.xdrurl1 + '<br>');
 	//document.write('xdrurl2: ' + __XDRFrame_loaded.xdrurl2 + '<br>');
-
 	document.write(
 		'<iframe width=16 height=16 src="' + __XDRFrame_loaded.xdrurl1 +
 			'" id="xdrframe-1"></iframe>' +
